<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2013 Joseph Mansfield

Permission is hereby granted, free of charge, to any person obtaining a
copy of this software and associated documentation files (the
"Software"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be included
in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<resources>
	<string name="application_name">Stack Answers</string>

	<string name="page_hot">What\'s hot</string>
	<string name="page_hot_desc">
		Popular questions and answers from the Stack Exchange network.
	</string>
	<string name="page_sites">Sites</string>
	<string name="page_sites_desc">
		Directory of Stack Exchange question and answer sites.
	</string>
	<string name="page_authenticate">Log in</string>
	<string name="page_settings">Settings</string>

	<string name="action_search_sites">Search sites</string>
	<string name="action_search_sites_condensed">Search</string>
	<string name="action_notifications_open">View notifications</string>
	<string name="action_notifications_close">Close notifications</string>
	<string name="action_notifications_condensed">Notifications</string>
	<string name="action_settings">Settings</string>
	<string name="action_help">Help</string>
	<string name="action_open_navigation_drawer">Open navigation</string>
	<string name="action_close_navigation_drawer">Close navigation</string>

	<string name="message_auth_info">
		You will be presented with the Stack Exchange authentication page to log in.
	</string>
	<string name="message_credentials">
		Your Stack Exchange credentials will not be stored.
	</string>

	<string name="fragment_tag_auth_info">auth_info</string>
	<string name="fragment_tag_settings">settings</string>

	<string name="button_continue">Continue</string>

	<string name="desc_site_dropdown">More information</string>
	<string name="desc_profile_image_placeholder">sftrabbit</string>
	<string name="desc_gold_badges">Gold badges</string>
	<string name="desc_silver_badges">Silver badges</string>
	<string name="desc_bronze_badges">Bronze badges</string>
</resources>
