<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
			android:id="@+id/action_search"
			android:title="@string/action_search_sites"
			android:titleCondensed="@string/action_search_sites_condensed"
			android:icon="@drawable/icon_action_search"
			android:showAsAction="ifRoom|collapseActionView"
			android:actionViewClass="android.widget.SearchView" />
	<item
			android:id="@+id/action_notifications"
			android:title="@string/action_notifications_open"
			android:titleCondensed="@string/action_notifications_condensed"
			android:showAsAction="always"
			android:actionViewClass="uk.co.sftrabbit.stackanswers.view.NotificationsActionView" />
	<item
			android:id="@+id/action_settings"
			android:title="@string/action_settings"
			android:showAsAction="never" />
</menu>

